// Copyright (c) 2016 BVK Chaitanya
//
// This file is part of the Ascent Library.
//
// The Ascent Library is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// The Ascent Library is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with the Ascent Library.  If not, see <http://www.gnu.org/licenses/>.

//
// This file defines rpc messages for algo/election package.
//

package ascent.algo.election;
option go_package = "election";

message ElectionMessage {
  optional StatusRequest status_request = 1;
  optional StatusResponse status_response = 2;

  optional ElectRequest elect_request = 3;
  optional ElectResponse elect_response = 4;
}

message StatusRequest {
}

message StatusResponse {
  optional int64 election_round = 1;
  optional string election_winner = 2;
}

message ElectRequest {
  required int64 election_round = 1;
}

message ElectResponse {
  required int64 election_round = 1;
  required string election_winner = 2;
}
